# Notes

catkin_make_m/: git_log
catkin_make_m/VINS-Fusion/: Output_Rws.txt  extrinsic_parameter.csv  vio.csv  vio.tum
catkin_make_m/VINS-Fusion/config/: vins_rviz_config.rviz
catkin_make_m/VINS-Fusion/corridor/: SL-VIO.tum
catkin_make_m/VINS-Fusion/corridor6/: SLC-VIO.tum
catkin_make_m/VINS-Fusion/on_car2/: vio.tum
catkin_make_m/VINS-Fusion/result_28_68/: Output_Rws (复件).txt  Output_Rws.txt  command  vio_28_148_46.8.tum  (+1 more)
catkin_make_m/line_feature/: line_feature.kdev4
catkin_make_m/line_feature/line_feature_tracker/: CMakeLists.txt  feature_tracker.kdev4  line_feature_tracker.kdev4  package.xml
catkin_make_m/line_feature/line_feature_tracker/.kdev4/: _custom.kdev4  line_feature_tracker.kdev4
catkin_make_m/line_feature/line_feature_tracker/src/: example.cpp  feature_tracker_node.cpp  linefeature_tracker (复件).cpp  linefeature_tracker.cpp  linefeature_tracker.h  linefeature_tracker_node (复件).cpp  linefeature_tracker_node.cpp  parameters.cpp  parameters.h
catkin_make_m/line_feature/line_feature_tracker/src/vanishing_point/: MSAC.cpp  MSAC.h  errorNIETO.cpp  lmmin.cpp  lmmin.h  lmstruct.h  vanishing_point_detect.cpp  vanishing_point_detect.h
笔记文档/: Tum.md  Untitled 1.odt  pl_vio运行结果.md  世界系下唯一的Rws.md  寒假.md  小觅测试.md  接下来需要继续考虑的.md  点线关联.md  用来测试.md  算法思路.md  计划及总结.md  论文提纲.md
笔记文档/其他/: Principles.md  一级标题.md  与馨馨的相处.md  无线视频传输.md  简历投递.md  随手记录de.md
笔记文档/论文理论/: ORB-slam.md  ORB_Vins.md  Okvis.md  Plan.md  VIns.md  主要步骤.md  开题报告.md  泡泡机器人的文章.md  线特征相关.md  英文文献摘要.md  论文摘要.md
笔记文档/设备及操作/: 2020年的国庆.md  C++相关.md  Opencv有关视觉图像的.md  get_offer.md  imu标定相关.md  slam理论.md  ubuntu_ros.md  常用指令.md  编程思想.md  设备参数.md
(+190 files in other folders)
